# BLE-key-agent

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.local.json
.github/: copilot-instructions.md
docs/: README.md  architecture.md  development-guide.md  requirements.md  spec-ble-protocol.md  spec-mac-agent.md  spec-raspi-receiver.md
plan/: 20260213173546_mac-agent-core.md  20260213_raspi-lcd-display-app.md  20260213_raspi-receiver-lib.md  20260226_freeze-prevention-part2.md  20260226_freeze-prevention.md  20260226_heartbeat-disconnect-detection.md  20260227_raspi-ble-comm-logging.md  20260301143324_mac-input-ble-lib.md  20260301212207_sample-migration.md  20260303224958_unihiker-m10-sample.md  20260304145547_python-run-unihiker.md  20260305140000_improve-ble-connectivity.md  20260306091131_rename-receiver-module.md  20260306105533_rename-device-name.md  20260306_fix-reconnect-logic.md
poc/: requirements.txt
reports/: ble_gatt_bleak_research.md  ble_gatt_key_transmission.md  bless_advertising_interval.md  bless_python37_compatibility.md  pynput_key_monitoring.md  pynput_keyboard_monitoring_research.md  pynputと_gatt通信によるキー送信方法.md  raspi_bluez_gatt_server_research.md
sample/: __init__.py
scripts/: create_and_push_date_tag.sh  run_mac.sh  run_raspi.sh  run_raspi_loop.sh  setup_mac.sh  setup_raspi.sh
tests/: test_ble_client.py  test_gatt_server.py  test_key_ble_agent.py  test_key_monitor.py  test_key_receiver.py  test_keyboard_monitor_wrapper.py  test_lcd_display.py  test_protocol.py  test_run_unihiker.py  test_unihiker_receiver.py
(+98 files in other folders)
