[project]
name = "ble-key-agent"
version = "0.1.0"
description = "BLE key input transmission system: Mac to Raspberry Pi"
requires-python = ">=3.10"

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]
mac = [
    "bleak>=0.21.0",
    "pynput>=1.7.6",
]
raspi = [
    # bless のみ pip で管理（apt リポジトリにない）
    # gpiozero, Pillow, spidev, numpy は apt で入れること（lgpio 連携のため）
    # 詳細: scripts/setup_raspi.sh 参照
    "bless>=0.3.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "sample"]
asyncio_mode = "auto"
